# pydanticio

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: code_standards.md  development_workflow.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
examples/: convert_format.py  users.csv
src/app/: version.py
src/pydanticio/: __init__.py  adapters.py  csv.py  json.py  json_lines.py  registry.py  utils.py  version.py  yaml.py
src/pydanticio/backends/: base.py  cbor.py  cbor_stub.py  csv.py  json.py  json_lines.py  messagepack.py  messagepack_stub.py  toml.py  toml_stub.py  yaml.py  yaml_stub.py
tests/: __init__.py  test_cbor.py  test_csv.py  test_explicit_format.py  test_json.py  test_json_lines.py  test_messagepack.py  test_misc.py  test_registry.py  test_toml.py  test_yaml.py
