[project]
name = "pydanticio"
version = "0.1.0"
description = "Tiny file IO utility library for Python powered by Pydantic"
authors = [{ name = "杜世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pydanticio"]

[tool.rye]
managed = true
dev-dependencies = [
    "pyright>=1.1.358",
    "pytest-cov>=5.0.0",
    "uvicorn>=0.29.0",
    "pytest-xdist>=3.5.0",
]

[tool.rye.scripts]
pyright_lint = "pyright ."
rye_format = "rye format ."
rye_lint = "rye lint ."
rye_fix = "rye lint --fix ."
test = "pytest tests --cov=pydanticio --cov-report=term --cov-report=xml"
format = { chain = ["rye_fix", "rye_format"] }
lint = { chain = ["rye_lint", "pyright_lint"] }
check = { chain = ["format", "lint", "test"] }

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "RUF",
    "UP",
    "N",
    "SIM",
    "A",
    "S",
    "DTZ",
    "PIE",
    "PLE",
]
# add directory names to exclude from analysis
exclude = ["tests/**/*", "deps/**/*"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# add directory names to exclude from analysis
ignore = ["deps"]
