[project]
name = "pydanticio"
version = "0.3.0"
description = "A Tiny file IO utility library for Python powered by Pydantic"
authors = [{ name = "杜世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pydantic>=2.5.0"]
license = { text = "MIT" }
readme = "README.md"
urls = { repository = "https://github.com/lucidfrontier45/pydanticio" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["pydantic", "io", "file", "utility", "library"]

[project.optional-dependencies]
yaml = ["pyyaml>=5.1.0"]

[dependency-groups]
dev = [
    "pyright>=1.1.358",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "RUF",
    "UP",
    "N",
    "SIM",
    "A",
    "S",
    "DTZ",
    "PIE",
    "PLE",
]
# add directory names to exclude from analysis
exclude = ["tests/**/*", "deps/**/*"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
# add directory names to exclude from analysis
ignore = ["deps"]
